// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

model User {
  id       Int      @id @default(autoincrement())
  email    String   @unique
  name     String
  password String
  createAt DateTime @default(now())
  updateAt DateTime @updatedAt

  posts         Post[]
  refreshTokens RefreshToken[]
}

model Post {
  id       Int      @id @default(autoincrement())
  title    String
  content  String
  authorId Int
  createAt DateTime @default(now())
  updateAt DateTime @updatedAt

  author User @relation(fields: [authorId], references: [id], onDelete: Cascade, onUpdate: NoAction)
}

model RefreshToken {
  token     String   @id @unique
  userId    Int
  expiresAt DateTime
  createAt  DateTime @default(now())

  user User @relation(fields: [userId], references: [id], onDelete: Cascade, onUpdate: NoAction)
}
